--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda Commerce</title>
+    <script src="https://kit.fontawesome.com/281252cb53.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
@@ -138,9 +139,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Supply 350</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                  <h2>$120</h2>
                 </div>
                 <div class="m-3">
-                  <div class="btn btn-warning">Buy Now</div>
+                  <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
                 </div>
               </div>
             </div>
@@ -150,9 +152,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Nike 360</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <h2>$320</h2>
                 </div>
                 <div class="m-3">
-                    <div class="btn btn-warning">Buy Now</div>
+                    <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
                 </div>
               </div>
             </div>
@@ -162,15 +165,62 @@
                 <div class="card-body">
                   <h5 class="card-title">Red Airmax</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
-                </div>
+                  <h2>$350</h2>
+                  </div>
                 <div class="m-3">
-                    <div class="btn btn-warning">Buy Now</div>
+                    <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
                 </div>
               </div>
             </div>
           </div>
     </section>
     <!-- Shoes section end -->
+    <!-- Backpack section start -->
+    <section class="container my-5">
+        <h2>Backpack</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Red Laltu Bag</h5>
+                  <h2>$120</h2>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="m-3">
+                  <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Blue Niltu Bag</h5>
+                  <h2>$320</h2>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="m-3">
+                    <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card border border-0 shadow-lg h-100">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Black Kaltu Bag</h5>
+                  <h2>$169</h2>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="m-3">
+                    <div class="btn btn-warning">Buy Now<i class="fa-solid fa-angles-right"></i></div>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- Backpack section end -->
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
