--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Panda Commerce</title>
     <script src="https://kit.fontawesome.com/281252cb53.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- custom css -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <header class="container">
@@ -23,13 +25,13 @@
         <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Shoes</a>
+        <a class="nav-link" href="#shoes">Shoes</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Backpack</a>
+        <a class="nav-link" href="#backpack">Backpack</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Subscribe</a>
+        <a class="nav-link" href="#subscribe">Subscribe</a>
         </li>
     </ul>
     </div>
@@ -39,7 +41,7 @@
 <section class="mt-5">
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 <div class="carousel-inner">
-<div class="carousel-item active bg-info border rounded p-5">
+<div class="carousel-item active panda-bg-info border rounded p-5">
 <div class="row">
 <div class="col-lg-7 d-flex align-items-center ps-5">
 <div>
@@ -54,7 +56,7 @@
 </div>
 </div>
 </div>
-<div class="carousel-item active bg-info border rounded p-5">
+<div class="carousel-item active panda-bg-info border rounded p-5">
 <div class="row">
 <div class="col-lg-7 d-flex align-items-center ps-5">
 <div>
@@ -69,7 +71,7 @@
 </div>
 </div>
 </div>
-<div class="carousel-item active bg-info border rounded p-5">
+<div class="carousel-item active panda-bg-info border rounded p-5">
 <div class="row">
 <div class="col-lg-7 d-flex align-items-center ps-5">
 <div>
@@ -130,7 +132,7 @@
     <!-- categories end -->
 
     <!-- Shoes section start -->
-    <section class="container my-5">
+    <section class="container my-5" id="shoes">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -176,7 +178,7 @@
     </section>
     <!-- Shoes section end -->
     <!-- Backpack section start -->
-    <section class="container my-5">
+    <section class="container my-5" id="backpack">
         <h2>Backpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
@@ -221,7 +223,25 @@
           </div>
     </section>
     <!-- Backpack section end -->
+    
+    <!-- Subscribe start -->
+    <section class="container d-flex justify-content-center rounded-3panda-bg-info align-items-center" id="subscribe">
+       <div>
+        <h2>LET'S STAY IN TOUCH</h2>
+        <p>Get updates on sales, specials and more</p>
+            <form>
+                <div class="mb-1">
+                    <input type="email"class="form-control"id="exampleInputEmail1"
+                    aria-describedby="emailHelp" aria-label="#">
+                <button type="submit" class="btn btn-warning">Submit</button>
+              </form>
+       </div>
+    </section>
+    <!-- Subscribe end -->
 </main>
+<footer class="mt-5 text-center">
+    <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
