--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 <header class="container">
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg fixed-top bg-light">
 <div class="container">
     <a class="navbar-brand">
     <img src="images/logo.png" alt="" class="d-inline-block align-text-top">
